@@ -245,10 +245,12 @@ if OS_SOLARIS
 # uses manual page section 4 for file formats (linux/freebsd use
 # section 5).  Automake can deal cleanly with man page sections 1-8
 # and n, but NOT with sections of the form 1m.
-# (TODO: Add update-smart-drivedb.1m)
 extra_MANS =      smartd.conf.4 \
                   smartctl.1m   \
                   smartd.1m
+if ENABLE_DRIVEDB
+extra_MANS += update-smart-drivedb.1m
+endif
 install-man: $(extra_MANS)
 	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(DESTDIR)$(mandir)/man4
@@ -413,6 +415,7 @@ CLEANFILES = \
         svnversion.h \
         update-smart-drivedb \
         update-smart-drivedb.8 \
+        update-smart-drivedb.1m \
         SMART
 
 # 'make maintainer-clean' also removes files generated by './autogen.sh'
